# IoT-based-Smart-Doorbell

./: CMakeLists.txt  button.c  button.h  buzzer.c  buzzer.h  lcd.c  lcd.h  led.c  led.h  light_sensor.c  light_sensor.h  main.c  motion_sensor.c  motion_sensor.h  rp2040-freertos-template.dis  rp2040-freertos-template.elf  rp2040-freertos-template.elf.map  rp2040-freertos-template.uf2
